LU-272 LBUG in replay-single test_74

Upon filter proc entry creation failure, return error instead
of continue silently.

Signed-off-by: Lai Siyao <laisiyao@whamcloud.com>
Change-Id: I0c5376b2dd8a88d5f950dd2165b3ab28c54e309b
Reviewed-on: http://review.whamcloud.com/497
Tested-by: Hudson
Reviewed-by: Bobi Jam <bobijam@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>